src/test/deca/syntax/valid/parser/with_object/class_with_two_methods_without_param.deca
class U{
  float f(){
    int i = 0;
    println(i);
  }

  int xf(){
    println(x);
  }
}
{}