src/test/deca/syntax/invalid/parser/oracle/instr_between_decl.deca
{
  float f = 1.0;
  i = 5;
  int i;
}
